# vscode_cmake_scaffold

./: CMakeLists.txt  README.md  shortcut.md
cmake/: GoogleTest.cmake  benchmark.cmake
include/: hello.h
src/: hello.cpp  main.cpp
test/: hello_test.cpp
tests/: CMakeLists.txt
